# logos-whistleblower

./: .gitignore  Cargo.toml  README.md  SUBMISSION.md  demo.sh  docker-compose.yml  spel.toml
.github/workflows/: ci.yml
basecamp-app/: CMakeLists.txt  README.md  metadata.json
basecamp-app/qml/: IndexPage.qml  Main.qml  UploadPage.qml
basecamp-app/src/: document_indexer_ffi.h  whistleblower_impl.cpp  whistleblower_impl.h
batch-anchor-cli/: Cargo.toml
batch-anchor-cli/src/: main.rs
cid-registry/: Cargo.toml  cid-registry.idl.json
cid-registry/src/: lib.rs  main.rs
docs/: CU_BENCHMARK.md  DEPLOYMENT.md  LIVE_ANCHOR_PLAN.md  LOGOS_ISSUES.md  VIDEO_NARRATION.md  whistleblower-demo.cast
document-indexer/: Cargo.toml  README.md
document-indexer/src/: ffi.rs  lib.rs
document-indexer/tests/: integration.rs
scripts/: criteria-demo.sh  publish-demo-docs.sh
tests/: integration.rs
