[package]
name = "batch-anchor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "batch-anchor"
path = "src/main.rs"

[dependencies]
document-indexer = { path = "../document-indexer" }
cid-registry = { path = "../cid-registry" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
