[package]
name = "cid-registry"
version = "0.1.0"
edition = "2021"

[lib]
name = "cid_registry"
path = "src/lib.rs"

[[bin]]
name = "cid_registry_program"
path = "src/main.rs"

[dependencies]
borsh = { version = "1", features = ["derive"] }
nssa-core = { package = "nssa_core", git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.1.2" }
spel-framework = { git = "https://github.com/logos-co/spel.git" }
risc0-zkvm = { version = "3.0.5", features = ["std"] }
serde = { version = "1", features = ["derive"] }
ruint = "=1.17.0"

[dev-dependencies]
nssa-core = { package = "nssa_core", git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.1.2" }
