[package]
name = "document-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
cid-registry = { path = "../cid-registry" }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
